tools/tests/errors/surf_parse_11.ki
# PARSER: a member access where '.' is followed by a string literal, not a name
var x = "abc"
discard x."length"